--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
 										Promoting the spirit of Innovation and Entrepreneurship amongst the students of B-schools across the country is the objective of Srijan – Present your Brainchild. This will provide a unique opportunity for budding entrepreneurs to pitch their business ideas with venture capitalists and investors.<br>
 										Srijan is a business plan competition that will enable you to take your ideas to the next level. The viability of your ideas shall be judged, mentors will guide you to improve upon your business plans and you will have a chance to showcase your ideas and B-plans in front of B-Plan experts.
 
-										<a href="https://d2c.pw/NO5HF8" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
+										<a href="https://dare2compete.com/o/srijan-present-your-brainchild-purvodaya-21-vinod-gupta-school-of-management-vgsom-indian-institute-of-technology-iit--140489" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
 									</p>
 
 								</div>
@@ -467,7 +467,7 @@
 									<h6 class="card-category text-info">Entrepreneurship Cell</h6>
 									<p class="card-description" align="justify">
 										The Entrepreneurship Cell (E-Cell) of Vinod Gupta School of Management, IIT Kharagpur proudly presents the prestigious event of Purvodaya festival, Vichaar – Business Learning Redefined. Vichaar provides a unique opportunity for budding entrepreneurs to apply their strategic skills in solving real-time business problems faced by various Startups.
-										<a href="https://d2c.pw/3GTboN" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
+										<a href="https://dare2compete.com/o/vichaar-business-learning-redefined-purvodaya-21-vinod-gupta-school-of-management-vgsom-indian-institute-of-technology-140482" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
 									</p>
 
 								</div>
@@ -529,7 +529,7 @@
   									<p class="card-description" align="justify">
   										The Supply Chain and Operations (ScOpe) Club of Vinod Gupta School of Management, IIT Kharagpur proudly presents the prestigious event of Purvodaya festival, Modus Operandi - The Supply Chain and Operations spectacle. A unique platform for students to taste the flavor of solving case studies related to core operations activities. Here is the chance to win exciting rewards by discovering your acumen on Supply chain and Operations, with challenging and invigorating rounds.
 
-  										<a href="https://d2c.pw/gnoePz" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
+  										<a href="https://dare2compete.com/o/modus-operandi-purvodaya-21-vinod-gupta-school-of-management-vgsom-indian-institute-of-technology-iit-kharagpur-140132" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
   									</p>
 
   								</div>
@@ -576,7 +576,7 @@
   									<h6 class="card-category text-info">Finterest Club</h6>
   									<p class="card-description" align="justify">
   										The Finterest Club of Vinod Gupta School of Management, IIT Kharagpur proudly presents the prestigious event of Purvodaya festival, 'Mulyankan', a National Level Financial Valuation competition. It is a unique platform for students to showcase their Financial acumen. The 3 rounds of the contest will touch upon your various skills, test your knowledge to the limits and provide a fabulous chance to win exciting rewards.
-  										<a href="https://d2c.pw/olwrvo" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
+  										<a href="https://dare2compete.com/o/mulyankan-purvodaya-21-vinod-gupta-school-of-management-vgsom-indian-institute-of-technology-iit-kharagpur-140469" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
   									</p>
 
   								</div>
@@ -605,7 +605,7 @@
   									<h6 class="card-category text-info">Drishtee Capital</h6>
   									<p class="card-description" align="justify">
   										Drishtee Capital – A Student-run Investment Club of Vinod Gupta School of Management, IIT Kharagpur, proudly presents the challenging event of the Purvodaya festival, Synergy. It is a one of its kind platform where students can bring out the stock market enthusiast inside them and showcase their aptitude by solving real-time investment cases.
-  										<a href="https://d2c.pw/y9csm8" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
+  										<a href="https://dare2compete.com/o/synergy-a-competition-for-stock-market-enthusiasts-purvodaya-21-vinod-gupta-school-of-management-vgsom-indian-institut-140126" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
   									</p>
 
   								</div>
@@ -702,7 +702,7 @@
   									<p class="card-description" align="justify">
   										The Consulting Club (TCC) of Vinod Gupta School of Management, IIT Kharagpur proudly presents one of the most prestigious events of Purvodaya festival, Guesstimates – What gets measured, gets managed. Consultants all over the world are required to guesstimate on a daily basis to propose the best possible solution for the clients’ requirements. Here is a chance to win exciting prizes by discovering your acumen on Guesstimates through challenging and invigorating rounds.	
 
-  										<a href=" https://d2c.pw/1DcaI7" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
+  										<a href="https://dare2compete.com/o/guesstimates-what-gets-measured-gets-managed-purvodaya-21-vinod-gupta-school-of-management-vgsom-indian-institute-of-t-140460" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
   									</p>
 
   								</div>
@@ -769,7 +769,7 @@
   									<p class="card-description" align="justify">
   										LEADER's CHALLENGE is a national level competition for developing innovative product lines for a market leader in a yet unexplored market segment. The event will be organized by MAD, the Marketing and Advertising Club of VGSoM, IIT Kharagpur. The objective of the event is to generate ideas about a new product for a market leader building on their strengths and brand values, and then accordingly make plans for brand positioning, risk analysis, feasibility and SWOT analysis, financial analysis and overall business and marketing strategy for it. The idea is to sensitize students to real life business situations and to develop their analytical and presentation skills. Through this competition we aspire to reach out to a wide network of Indian academic institutes with the aim to foster and nurture the budding minds.
 
-  										<a href="https://d2c.pw/2yL8ob" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
+  										<a href="https://dare2compete.com/o/leaders-challenge-rise-of-the-marketer-purvodaya-21-vinod-gupta-school-of-management-vgsom-indian-institute-of-technol-140168" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
   									</p>
 
   								</div>
@@ -797,7 +797,7 @@
   									<p class="card-description" align="justify">
   										Think Vent is a fun and engaging event organised by the Marketing and Advertising Club of VGSoM, designed to test the innovation, creativity and brand awareness of the participants. The competition will offer a chance to explore the challenges faced by a brand manager or product marketer in the present era.
 
-  										<a href="https://d2c.pw/HH2tlt" target="_blank"> 
+  										<a href="https://dare2compete.com/o/think-vent-purvodaya-21-vinod-gupta-school-of-management-vgsom-indian-institute-of-technology-iit-kharagpur-140566" target="_blank"> 
   											<button class="btn btn-primary pull-right"> Register on D2C </button></a>
   										</p>
 
@@ -871,7 +871,7 @@
   												Saamanjasya – The CSR club of VGSoM, IIT Kharagpur presents an opportunity to do some mind scribbling and pen down your thoughts for the article writing competition.<br>
   												A topic on a social issue will be provided to the registered candidates. The most practical, relevant, optimal, easy to implement and appealing solutions will be rewarded. Though English vocabulary alone is not the only criteria but the thought process and the structure of the article to be preferable maintained.
 
-  												<a href="https://d2c.pw/9wIUzm" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
+  												<a href="https://dare2compete.com/o/saamanjasya-presents-aalekh-purvodaya-21-vinod-gupta-school-of-management-vgsom-indian-institute-of-technology-iit-kha-140355" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
   											</p>
 
   										</div>
@@ -915,7 +915,7 @@
   												“The beginning of knowledge is the discovery of something we do not understand.”- Frank Herbert<br>
   												We, a group of knowledge enthusiasts bitten by curiosity bug, a.k.a. the Quiz Club of Vinod Gupta School of Management, IIT Kharagpur proudly presents our flagship event of Purvodaya Festival – Quizzard – The Ultimate B-School Quiz. If you think you have what it takes, come, be part of this challenge!
 
-  												<a href="https://d2c.pw/CyYwIF" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
+  												<a href="https://dare2compete.com/o/quizzard-purvodaya-21-vinod-gupta-school-of-management-vgsom-indian-institute-of-technology-iit-kharagpur-140042" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
   											</p>                    
   										</div>
   										<div class="col-md-5">
@@ -944,7 +944,7 @@
   											<p class="card-description" align="justify">
   												“Life is unpredictable, and I feel, to some extent, lightning and cinematography should be a reflection of that” – Rachael Morrison. Everything in today’s world is going fast and we tend to forget to enjoy the little moments in our life. So let’s just slow down a bit and see the outer world in a new perspective. This “Slow Motion Challenge” expects you to freeze a short slow motion video clip with a maximum duration of one minute. There is no limit on using your creativity and film making skills, so go ahead and surprise us with your entries.
 
-  												<a href="https://d2c.pw/fn8u9e" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
+  												<a href="https://dare2compete.com/o/lights-camera-shutter-purvodaya-21-vinod-gupta-school-of-management-vgsom-indian-institute-of-technology-iit-kharagpur-140885" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
   											</p>
 
   										</div>
@@ -960,7 +960,7 @@
   											<p class="card-description" align="justify">
   												“The camera is an instrument that teaches people how to see without a camera.” - Dorothea Lange. VGSoM Flash, calling all photography enthusiasts! Send us a moment that you want to keep from running away and show us what you failed to put in words. And remember, you don’t take a photograph, you make it!
 
-  												<a href="https://d2c.pw/HIhgfo" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
+  												<a href="https://dare2compete.com/o/destello-purvodaya-21-vinod-gupta-school-of-management-vgsom-indian-institute-of-technology-iit-kharagpur-140889" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
   											</p>
 
   										</div>
