Name and logo change
Changed logo and initial description

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-md-6">
-								<img width=auto height=300px type="image/png" src="./assets/img/purvodaya/purvodaya-21-masthead-white-min.png"> 
+								<img width=auto height=300px type="image/png" src="./assets/img/purvodaya/Purvodaya_22.png"> 
             <!--
                 <h4 style="font-family:pristina;">
                 	<img width=auto height=60px type="image/png" src="./assets/img/purvodaya/IOCL-logo.png">
@@ -191,8 +191,8 @@
 					<p  align="justify">
 						Purvodaya, the annual B-school fest of Vinod Gupta School of Management, IIT Kharagpur is an amalgamation of events spread across all the domains of business and management. Spread across 3 days, it provides an ideal platform for the budding managers and innovators of today to hone their skills and test their mettle against their peers. The event hosts a complete business extravaganza. <br>
 						We create an environment wherein students from all over India aspire to learn the business jargons and win the competitions. It aims to bring together management students from various B-schools of the country to a common platform where each participant presents his/her business acumen to be the best and win the competitions.<br>
-						A coalescence of corporate tycoons, industry experts, technocrats and best business minds from all over India bring their vast knowledge share to the table<br>
-						Inspirational. Challenging. Prophetic. The Speakers are creative market leaders, who share their insights at the leadership summit. Meet the Experts unlocks the secrets of commercial success. Together, they change how we think about business.<br>
+						A coalescence of corporate tycoons, industry experts, technocrats and best business minds from all over India bring their vast knowledge share to the table
+                        The Speakers are creative market leaders, who share their insights at the leadership summit. Meeting the experts unlocks the secrets of commercial success. Together, they change how we think about business.<br>
 						Purvodaya is the place to learn, share and develop new ways of thinking. It is a festival of ideas, innovation, challenge and creativity, a place where future businessmen and corporate leaders of different backgrounds come to grow.<br>
 						Purvodaya concludes on an ecstatic note with a fun-filled cultural night thereby adding colors to the mundane MBA life.
 					</p> 
@@ -200,7 +200,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-11 ml-auto mr-auto text-center">
-					<h4 class="title">Purvodaya 2021 – EXCELLENCE THROUGH RESILIENCE</h4>
+					<h4 class="title">Purvodaya 2022 – BREAKING THE PARADIGMS</h4>
 					<p align="center">
 						<b>“If you can’t fly then run, if you can’t run then walk, if you can’t walk then crawl, but whatever you do you have to keep moving forward.” </p>
 							<p align="right">- Martin Luther King Jr</b></p>
