contact info update

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-md-6">
-								<img width=auto height=300px type="image/png" src="./assets/img/purvodaya/Purvodaya Logo_22_White.png"> 
+								<img width=auto height=300px type="image/png" src="./assets/img/purvodaya/Purvodaya_22-min.png"> 
             <!--
                 <h4 style="font-family:pristina;">
                 	<img width=auto height=60px type="image/png" src="./assets/img/purvodaya/IOCL-logo.png">
@@ -239,8 +239,8 @@
 								<div class="icon">
 									<i class="fa fa-users"></i>
 								</div>
-								<h4 class="info-title">4500+</h4>
-								<p><b> Purvodaya '20</b> saw a staggering number of registrations of over 4500 students from across the country  </p>
+								<h4 class="info-title">6000+</h4>
+								<p><b> Purvodaya '21</b> saw a staggering number of registrations of over 6000 students from across the country  </p>
 							</div>
 						</div>
 						<div class="col-sm-4">
@@ -280,7 +280,7 @@
 									<i class="fa fa-signal"></i>
 								</div>
 								<h4 class="info-title">30+</h4>
-								<p><b>Purvodaya '20</b> saw over 30 sponsors</p>
+								<p><b>Purvodaya '21</b> saw over 30 sponsors</p>
 							</div>
 						</div>
 					</div>
@@ -2458,11 +2458,11 @@
 						</div>
 						<div class="description">
 							<h4 class="info-title">Call Us</h4>
-							<p> Karthik Dasari
-								<br> +91 95939 78382
+							<p> Dhiyeri P Joy
+								<br> +91 85478 96320
 							</p>
-							<p> Vignesh Venkataraman
-								<br> +91 96006 95010
+							<p> Gourang Kalra
+								<br> +91 80102 76750
 							</p>
 						</div>
 					</div>
