--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-md-6">
-								<img width=auto height=300px type="image/png" src="./assets/img/purvodaya/Purvodaya_22-min.png"> 
+								<img width=auto height=300px type="image/png" src="./assets/img/purvodaya/Purvodaya Logo_22_White_corrected.png"> 
             <!--
                 <h4 style="font-family:pristina;">
                 	<img width=auto height=60px type="image/png" src="./assets/img/purvodaya/IOCL-logo.png">
@@ -435,20 +435,20 @@
 							<div class="row">
 								<div class="col-md-7">
 									<h3 class="card-title">
-										<a href="#pablo">Srijan - Present your Brainchild</a>
+										<a href="#pablo">Srijan - Success awaits you</a>
 									</h3>
 									<h6 class="card-category text-info">Entrepreneurship Cell</h6>
 									<p class="card-description" align="justify">
-										Promoting the spirit of Innovation and Entrepreneurship amongst the students of B-schools across the country is the objective of Srijan – Present your Brainchild. This will provide a unique opportunity for budding entrepreneurs to pitch their business ideas with venture capitalists and investors.<br>
-										Srijan is a business plan competition that will enable you to take your ideas to the next level. The viability of your ideas shall be judged, mentors will guide you to improve upon your business plans and you will have a chance to showcase your ideas and B-plans in front of B-Plan experts.
+										Promoting the spirit of Innovation and Entrepreneurship amongst the students across the country is the objective of Srijan –Success awaits you. This will provide a unique opportunity for budding entrepreneurs to pitch their business ideas with venture capitalists and investors. Srijan is a business plan competition that will enable you to take your ideas to the next level.
+										The viability of your ideas shall be judged, mentors will guide you to improve upon your business plans and you will have a chance to showcase your ideas and B-plans in front of B-Plan experts.Registered candidates can download the template and use it as reference for submission of the B-Plan.
 
-										<a href="https://dare2compete.com/o/srijan-present-your-brainchild-purvodaya-21-vinod-gupta-school-of-management-vgsom-indian-institute-of-technology-iit--140489" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
+										<a href="https://dare2compete.com/p/srijan-success-awaits-you-purvodaya-22-vinod-gupta-school-of-management-vgsom-indian-institute-of-technology-iit-khara-250132" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
 									</p>
 
 								</div>
 								<div class="col-md-5">
 									<div class="card-header card-header-image">
-										<img class="img img-raised" src="./assets/img/events/E-Cell_Srijan21.png">
+										<img class="img img-raised" src="./assets/img/events/ECell_Srijan22.png">
 									</div>
 								</div>
 							</div>
@@ -457,17 +457,17 @@
 							<div class="row">
 								<div class="col-md-5">
 									<div class="card-header card-header-image">
-										<img class="img img-raised" src="./assets/img/events/E-Cell_Vichaar21.png">
+										<img class="img img-raised" src="./assets/img/events/Ecell_Vichaar22.png">
 									</div>
 								</div>
 								<div class="col-md-7">
 									<h3 class="card-title">
-										<a href="#pablo">Vichaar – Business Learning Redefined</a>
+										<a href="#pablo">Vichaar – Think Again!!</a>
 									</h3>
 									<h6 class="card-category text-info">Entrepreneurship Cell</h6>
 									<p class="card-description" align="justify">
 										The Entrepreneurship Cell (E-Cell) of Vinod Gupta School of Management, IIT Kharagpur proudly presents the prestigious event of Purvodaya festival, Vichaar – Business Learning Redefined. Vichaar provides a unique opportunity for budding entrepreneurs to apply their strategic skills in solving real-time business problems faced by various Startups.
-										<a href="https://dare2compete.com/o/vichaar-business-learning-redefined-purvodaya-21-vinod-gupta-school-of-management-vgsom-indian-institute-of-technology-140482" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
+										<a href="https://dare2compete.com/p/vichaar-business-learning-redefined-purvodaya-22-vinod-gupta-school-of-management-vgsom-indian-institute-of-technology-250042" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
 									</p>
 
 								</div>
@@ -523,19 +523,22 @@
   							<div class="row">
   								<div class="col-md-7">
   									<h3 class="card-title">
-  										<a href="#pablo">Modus Operandi - The Supply Chain and Operations Competition</a>
+  										<a href="#pablo">Modus Operandi - A Supply Chain Case Competition</a>
   									</h3>
   									<h6 class="card-category text-info">ScOpe Club</h6>
   									<p class="card-description" align="justify">
-  										The Supply Chain and Operations (ScOpe) Club of Vinod Gupta School of Management, IIT Kharagpur proudly presents the prestigious event of Purvodaya festival, Modus Operandi - The Supply Chain and Operations spectacle. A unique platform for students to taste the flavor of solving case studies related to core operations activities. Here is the chance to win exciting rewards by discovering your acumen on Supply chain and Operations, with challenging and invigorating rounds.
+  										"The Supply Chain and Operations (SCOPE) Club of Vinod Gupta School of Management, IIT Kharagpur proudly presents the prestigious event of Purvodaya festival, Modus Operandi - The Supply Chain and Operations Spectacle.
+										It provides an excellent opportunity for students to experience real business issues related to operations management. The event has three rounds-online i.e., quiz, case analysis, and an on-campus round. Here is the chance to win exciting rewards by discovering your acumen in Supply Chain and Operations, with challenging and invigorating rounds.
 
-  										<a href="https://dare2compete.com/o/modus-operandi-purvodaya-21-vinod-gupta-school-of-management-vgsom-indian-institute-of-technology-iit-kharagpur-140132" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
+										<br>Come! Be a part of this challenge, unlock the new avenues for an industry face-off in the field of Supply Chain and Operations."
+
+  										<a href="https://dare2compete.com/competition/iscea-presents-modus-operandi-purvodaya-22-vinod-gupta-school-of-management-vgsom-indian-institute-of-techno-249872" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
   									</p>
 
   								</div>
   								<div class="col-md-5">
   									<div class="card-header card-header-image">
-  										<img class="img img-raised" src="./assets/img/events/ScOpe_Modus Operandi21.png">
+  										<img class="img img-raised" src="./assets/img/events/Scope_Modus Operandi22.png">
   									</div>
   								</div>
   							</div>
@@ -571,19 +574,20 @@
 
   								<div class="col-md-7">
   									<h3 class="card-title">
-  										<a href="#pablo">Mulyankan</a>
+  										<a href="#pablo">Mulyankan - ANALYSE.DEFEND.COMPARE</a>
   									</h3>
   									<h6 class="card-category text-info">Finterest Club</h6>
   									<p class="card-description" align="justify">
-  										The Finterest Club of Vinod Gupta School of Management, IIT Kharagpur proudly presents the prestigious event of Purvodaya festival, 'Mulyankan', a National Level Financial Valuation competition. It is a unique platform for students to showcase their Financial acumen. The 3 rounds of the contest will touch upon your various skills, test your knowledge to the limits and provide a fabulous chance to win exciting rewards.
-  										<a href="https://dare2compete.com/o/mulyankan-purvodaya-21-vinod-gupta-school-of-management-vgsom-indian-institute-of-technology-iit-kharagpur-140469" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
+  										"The Finterest Club of Vinod Gupta School of Management, IIT Kharagpur proudly presents prestigious event of Purvodaya festival, 'Mulyankan', a National Level Financial Valuation competition. It is a unique platform for students to showcase their financial acumen. The 3 rounds of the contest will touch upon your various skills, test your knowledge to the limits and provides fabulous chance to win exciting rewards
+										<br>So, what are you waiting for! Be a part of this challenge and win exciting prizes!"
+  										<a href="https://dare2compete.com/p/mulyankan-purvodaya22-purvodaya-22-vinod-gupta-school-of-management-vgsom-indian-institute-of-technology-iit-kharagpur-250037" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
   									</p>
 
   								</div>
   								<div class="col-md-5">
   									<div class="card-header card-header-image">
   										<a href="#events">
-  											<img class="img" src="./assets/img/events/Finterest_Mulyankan21.png">
+  											<img class="img" src="./assets/img/events/Finterest_Mulyankan22.png">
   										</a>
   									</div>
   								</div>
@@ -594,7 +598,7 @@
   								<div class="col-md-5">
   									<div class="card-header card-header-image">
   										<a href="#events">
-  											<img class="img" src="./assets/img/events/Drishtee Capital_Synergy21.jpg">
+  											<img class="img" src="./assets/img/events/DrishteeCapital_Synergy22.jpg">
   										</a>
   									</div>
   								</div>
@@ -605,7 +609,7 @@
   									<h6 class="card-category text-info">Drishtee Capital</h6>
   									<p class="card-description" align="justify">
   										Drishtee Capital – A Student-run Investment Club of Vinod Gupta School of Management, IIT Kharagpur, proudly presents the challenging event of the Purvodaya festival, Synergy. It is a one of its kind platform where students can bring out the stock market enthusiast inside them and showcase their aptitude by solving real-time investment cases.
-  										<a href="https://dare2compete.com/o/synergy-a-competition-for-stock-market-enthusiasts-purvodaya-21-vinod-gupta-school-of-management-vgsom-indian-institut-140126" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
+  										<a href="https://dare2compete.com/competition/synergy-a-competition-for-stock-market-enthusiasts-purvodaya-22-vinod-gupta-school-of-management-vgsom-india-250061" target="_blank"><button class="btn btn-primary pull-right"> Register on D2C </button></a>
   									</p>
 
   								</div>
