--- a/index.html
+++ b/index.html
@@ -202,11 +202,10 @@
 				<div class="col-md-11 ml-auto mr-auto text-center">
 					<h4 class="title">Purvodaya 2022 – BREAKING THE PARADIGMS</h4>
 					<p align="center">
-						<b>“If you can’t fly then run, if you can’t run then walk, if you can’t walk then crawl, but whatever you do you have to keep moving forward.” </p>
-							<p align="right">- Martin Luther King Jr</b></p>
-							<p align="justify">Dating back to Robert Bruce and spider's story to modern-day, Arunima Sinha climbing Mount Everest beating all odds, one thing that lies common in their success stories is that they all failed in their respective endeavours only to bounce back with even more zeal to win. Would we have ever gone to the moon if we gave up?<br> 
-								Purvodaya, the annual B-School fest of VGSoM, IIT Kharagpur, is an epic saga of perseverance where competitions will provide a platform to test out the budding manager's adaptability, flexibility, and robustness. The prodigious mix of events spanning across contemporary business problems from a diverse spectrum of industries challenges the finest B School students of our country to show the world that with resilience, we can beat the odds and rise above the ashes.<br>
-								The essence of Purvodaya has always been about drawing lessons from defeat, rather than boasting about our victories. We strive to continue the magic and the ethos that has made past editions events to remember, by making sure that Purvodaya is where ideas get sparked, innovations thrive, and creativity blooms.
+						<b>“Change will not come if we wait for some other person or some other time. We are the ones we've been waiting for. We are the change that we seek.” </p>
+							<p align="right">- Barack Obama</b></p>
+							<p align="justify">The past millennium has been an era of countless inventions like the Printing Press which allowed literacy to greatly expand, Electric Light that powered countless social changes, Vaccinations that protected people from diseases, Airplanes allowing people and products to quickly move, Radio and Television that made the world look smaller, and Computers which transformed Business world. These changes were only possible due to the Creativity of some enthusiastic minds. That Creativity broke out established patterns to look at things differently. Small changes in our reasoning can prompt gigantic modifications in our outcome.
+							In Purvodaya, the annual B-School fest of Vinod Gupta School of Management, IIT Kharagpur, we encourage the vigorous minds of the Country to participate in a surfeit of opportunities and to leave a mark by excelling in different events by abandoning antiquated approaches and spawning the newer ideas. Through adaptability, flexibility, and robustness these bright minds decipher the labyrinth of contemporary Business challenges and emerge victoriously. We strive to continue the magic and the ethos that has made past editions events to remember, by making sure that Purvodaya is where ideas get sparked, innovations thrive, and creativity blooms.
 
 							</p>      
 						</div>
@@ -2004,10 +2003,10 @@
 			<div class="col-md-2">
 				<div class="card card-profile card-plain">
 					<div class="card-header card-avatar">
-						<img class="img" src="./assets/img/Team/jnr/Kanika.JPG" />
+						<img class="img" src="./assets/img/Team/jnr/Abhishek Sonpal_Purvodaya.JPG" />
 					</div>
 					<div class="card-body ">
-						<h4 class="card-title">Kanika Yadav</h4>
+						<h4 class="card-title">Abhishek Sonpal</h4>
 					</div>
 					<div class="card-footer justify-content-center">
 						<a href="https://www.facebook.com/kanika.yadav.562" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
