second year team details

--- a/index.html
+++ b/index.html
@@ -1999,14 +1999,14 @@
 				<h2 class="title">Meet The Team</h2>
 			</div>
 		</div>
-		<div class="row">
+		<!--<div class="row">
 			<div class="col-md-2">
 				<div class="card card-profile card-plain">
 					<div class="card-header card-avatar">
-						<img class="img" src="./assets/img/Team/jnr/Abhishek Sonpal_Purvodaya.JPG" />
+						<img class="img" src="./assets/img/Team/jnr/Kanika.JPG" />
 					</div>
 					<div class="card-body ">
-						<h4 class="card-title">Abhishek Sonpal</h4>
+						<h4 class="card-title">Kanika Yadav</h4>
 					</div>
 					<div class="card-footer justify-content-center">
 						<a href="https://www.facebook.com/kanika.yadav.562" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
@@ -2085,8 +2085,8 @@
 					</div>
 				</div>
 			</div>
-		</div>
-		<div class="row">
+		</div>-->
+		<!--<div class="row">
 			<div class="col-md-2">
 				<div class="card card-profile card-plain">
 					<div class="card-header card-avatar">
@@ -2171,9 +2171,9 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div>-->
 		<div class="row">
-			<div class="col-md-2">
+			<!--<div class="col-md-2">
 				<div class="card card-profile card-plain">
 					<div class="card-header card-avatar">
 						<img class="img" src="./assets/img/Team/jnr/Samuel David.jpg" />
@@ -2186,9 +2186,9 @@
 						<a href="https://www.linkedin.com/in/samuel-david-b3a408111" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
 					</div>
 				</div>
-			</div>
+			</div>-->
 
-			<div class="col-md-2">
+			<!--<div class="col-md-2">
 				<div class="card card-profile card-plain">
 					<div class="card-header card-avatar">
 						<img class="img" src="./assets/img/Team/jnr/KrunalMalve.jpg" />
@@ -2201,7 +2201,7 @@
 						<a href="https://www.linkedin.com/in/krunal-malve-02102013b" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
 					</div>
 				</div>
-			</div>
+			</div>-->
 
 			<div class="col-md-2">
 				<div class="card card-profile card-plain">
