team details updated

--- a/index.html
+++ b/index.html
@@ -2262,9 +2262,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
-
-		<div class="row">
+			
 			<div class="col-md-2">
 				<div class="card card-profile card-plain">
 					<div class="card-header card-avatar">
@@ -2294,7 +2292,10 @@
 					</div>
 				</div>
 			</div>
+		</div>
 
+		<div class="row">
+			
 			<div class="col-md-2">
 				<div class="card card-profile card-plain">
 					<div class="card-header card-avatar">
@@ -2354,9 +2355,8 @@
 					</div>
 				</div>
 			</div>
-		</div>
-
-		<div class="row">
+			
+			<div class="row">
 			<div class="col-md-2">
 				<div class="card card-profile card-plain">
 					<div class="card-header card-avatar">
@@ -2386,6 +2386,9 @@
 					</div>
 				</div>
 			</div>
+		</div>
+
+		<div class="row">
 
 			<div class="col-md-2">
 				<div class="card card-profile card-plain">
@@ -2424,6 +2427,21 @@
 					</div>
 					<div class="card-body ">
 						<h4 class="card-title">Udaya Bhaskar</h4>
+					</div>
+					<div class="card-footer justify-content-center">
+						<a href="https://www.facebook.com/uday.bhaskar.5680899" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
+						<a href="https://www.linkedin.com/in/udayabha/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+					</div>
+				</div>
+			</div>
+			
+			<div class="col-md-2">
+				<div class="card card-profile card-plain">
+					<div class="card-header card-avatar">
+						<img class="img" src="./assets/img/Team/2020/Abhishek Sonpal.JPEG" />
+					</div>
+					<div class="card-body ">
+						<h4 class="card-title">Abhishek Sonpal</h4>
 					</div>
 					<div class="card-footer justify-content-center">
 						<a href="https://www.facebook.com/uday.bhaskar.5680899" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
