complete team details updated

--- a/index.html
+++ b/index.html
@@ -2437,14 +2437,230 @@
 			<div class="col-md-2">
 				<div class="card card-profile card-plain">
 					<div class="card-header card-avatar">
-						<img class="img" src="./assets/img/Team/2020/Abhishek Sonpal.JPEG" />
+						<img class="img" src="./assets/img/Team/2022/Abhishek Sonpal.JPEG" />
 					</div>
 					<div class="card-body ">
 						<h4 class="card-title">Abhishek Sonpal</h4>
 					</div>
 					<div class="card-footer justify-content-center">
-						<a href="https://www.facebook.com/uday.bhaskar.5680899" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
-						<a href="https://www.linkedin.com/in/udayabha/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+						<a href="https://www.facebook.com/abhishek.sonpal/" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
+						<a href="https://www.linkedin.com/in/abhisheksonpal" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+					</div>
+				</div>
+			</div>
+			
+			<div class="col-md-2">
+				<div class="card card-profile card-plain">
+					<div class="card-header card-avatar">
+						<img class="img" src="./assets/img/Team/2022/Ayaskanta Das_Purvodaya.JPG" />
+					</div>
+					<div class="card-body ">
+						<h4 class="card-title">Ayaskanta Das</h4>
+					</div>
+					<div class="card-footer justify-content-center">
+						<a href="https://m.facebook.com/100001730032978/" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
+						<a href="https://www.linkedin.com/in/ayaskantadas" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+					</div>
+				</div>
+			</div>
+			
+			<div class="col-md-2">
+				<div class="card card-profile card-plain">
+					<div class="card-header card-avatar">
+						<img class="img" src="./assets/img/Team/2022/Deepak Verma_Purvodaya.JPG" />
+					</div>
+					<div class="card-body ">
+						<h4 class="card-title">Deepak Verma</h4>
+					</div>
+					<div class="card-footer justify-content-center">
+						<a href="https://www.facebook.com/profile.php?id=100004279056700" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
+						<a href="https://www.linkedin.com/in/deepak-verma-64965b131/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+					</div>
+				</div>
+			</div>
+		</div>
+		
+		<div class="row">
+
+			<div class="col-md-2">
+				<div class="card card-profile card-plain">
+					<div class="card-header card-avatar">
+						<img class="img" src="./assets/img/Team/2022/Dhaval Bhanushali_Purvodaya.JPG" />
+					</div>
+					<div class="card-body ">
+						<h4 class="card-title">Dhaval Bhanushali</h4>
+					</div>
+					<div class="card-footer justify-content-center">
+						<a href="https://www.facebook.com/dhaval.bhanushali.186590" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
+						<a href="https://www.linkedin.com/in/dhaval-bhanushali-33265a218" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-md-2">
+				<div class="card card-profile card-plain">
+					<div class="card-header card-avatar">
+						<img class="img" src="./assets/img/Team/2022/Gokul M_Purvodaya.JPG" />
+					</div>
+					<div class="card-body ">
+						<h4 class="card-title">Gokul M</h4>
+					</div>
+					<div class="card-footer justify-content-center">
+						<a href="https://www.facebook.com/gokul.murugaiyan/" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
+						<a href="https://www.linkedin.com/in/gokulmurugaiyan/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-md-2">
+				<div class="card card-profile card-plain">
+					<div class="card-header card-avatar">
+						<img class="img" src="./assets/img/Team/2022/Jaison Joy_Purvodaya.JPG" />
+					</div>
+					<div class="card-body ">
+						<h4 class="card-title">Jaison Joy</h4>
+					</div>
+					<div class="card-footer justify-content-center">
+						<a href="https://www.facebook.com/jaison.jaison.10888/" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
+						<a href="https://www.linkedin.com/in/jaison-joy-157458b3/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+					</div>
+				</div>
+			</div>
+			
+			<div class="col-md-2">
+				<div class="card card-profile card-plain">
+					<div class="card-header card-avatar">
+						<img class="img" src="./assets/img/Team/2022/Joel Lalucherian_Purvodaya.JPG" />
+					</div>
+					<div class="card-body ">
+						<h4 class="card-title">Joel Lalucherian</h4>
+					</div>
+					<div class="card-footer justify-content-center">
+						<a href="https://www.facebook.com/joel.lalucherian.90" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
+						<a href="https://www.linkedin.com/in/joellalucherian/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+					</div>
+				</div>
+			</div>
+			
+			<div class="col-md-2">
+				<div class="card card-profile card-plain">
+					<div class="card-header card-avatar">
+						<img class="img" src="./assets/img/Team/2022/Rohit Shinde_Purvodaya.JPG" />
+					</div>
+					<div class="card-body ">
+						<h4 class="card-title">Rohit Shinde_Purvodaya</h4>
+					</div>
+					<div class="card-footer justify-content-center">
+						<a href="https://www.facebook.com/theweeknd1996/" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
+						<a href="https://www.linkedin.com/in/rohit-shinde-1927a5137/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+					</div>
+				</div>
+			</div>
+			
+			<div class="col-md-2">
+				<div class="card card-profile card-plain">
+					<div class="card-header card-avatar">
+						<img class="img" src="./assets/img/Team/2022/Sameer Quadri_Purvodaya.JPG" />
+					</div>
+					<div class="card-body ">
+						<h4 class="card-title">Sameer Quadri</h4>
+					</div>
+					<div class="card-footer justify-content-center">
+						<a href="https://www.facebook.com/sameer.quadri.12/" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
+						<a href="https://www.linkedin.com/in/sameer-quadri-682143110/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+					</div>
+				</div>
+			</div>
+		</div>
+		
+		<div class="row">
+
+			<div class="col-md-2">
+				<div class="card card-profile card-plain">
+					<div class="card-header card-avatar">
+						<img class="img" src="./assets/img/Team/2022/Saveen Hanwatkar_Purvodaya.JPG" />
+					</div>
+					<div class="card-body ">
+						<h4 class="card-title">Saveen Hanwatkar</h4>
+					</div>
+					<div class="card-footer justify-content-center">
+						<a href="https://www.facebook.com/saveen.hanwatkar.3" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
+						<a href="https://www.linkedin.com/in/saveenhanwatkar/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-md-2">
+				<div class="card card-profile card-plain">
+					<div class="card-header card-avatar">
+						<img class="img" src="./assets/img/Team/2022/Soumajit Chail_Purvodaya.JPG" />
+					</div>
+					<div class="card-body ">
+						<h4 class="card-title">Soumajit Chail</h4>
+					</div>
+					<div class="card-footer justify-content-center">
+						<a href="https://www.facebook.com/soumajit.chail.1" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
+						<a href="https://www.linkedin.com/in/soumajitchail" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-md-2">
+				<div class="card card-profile card-plain">
+					<div class="card-header card-avatar">
+						<img class="img" src="./assets/img/Team/2022/Srinivasa Praneeth Gundapuneedi.JPG" />
+					</div>
+					<div class="card-body ">
+						<h4 class="card-title">Praneeth G S</h4>
+					</div>
+					<div class="card-footer justify-content-center">
+						<a href="https://www.facebook.com/praneeth.gs/" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
+						<a href="https://www.linkedin.com/in/srinivasapraneethgundapuneedi" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+					</div>
+				</div>
+			</div>
+			
+			<div class="col-md-2">
+				<div class="card card-profile card-plain">
+					<div class="card-header card-avatar">
+						<img class="img" src="./assets/img/Team/2022/Suraj Chikhale_Purvodaya.JPG" />
+					</div>
+					<div class="card-body ">
+						<h4 class="card-title">Suraj Chikhale</h4>
+					</div>
+					<div class="card-footer justify-content-center">
+						<a href="https://www.facebook.com/suraj.chikhale/" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
+						<a href="https://www.linkedin.com/in/suraj-chikhale/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+					</div>
+				</div>
+			</div>
+			
+			<div class="col-md-2">
+				<div class="card card-profile card-plain">
+					<div class="card-header card-avatar">
+						<img class="img" src="./assets/img/Team/2022/Vignesh E_Purvodaya.JPG" />
+					</div>
+					<div class="card-body ">
+						<h4 class="card-title">Vignesh E</h4>
+					</div>
+					<div class="card-footer justify-content-center">
+						<a href="https://www.facebook.com/vignesh.wolverine" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
+						<a href="https://www.linkedin.com/in/vignesh-ezhilkumar/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+					</div>
+				</div>
+			</div>
+			
+			<div class="col-md-2">
+				<div class="card card-profile card-plain">
+					<div class="card-header card-avatar">
+						<img class="img" src="./assets/img/Team/2022/Sameer Quadri_Purvodaya.JPEG" />
+					</div>
+					<div class="card-body ">
+						<h4 class="card-title">Sameer Quadri</h4>
+					</div>
+					<div class="card-footer justify-content-center">
+						<a href="https://www.facebook.com/sameer.quadri.12/" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
+						<a href="https://www.linkedin.com/in/sameer-quadri-682143110/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
 					</div>
 				</div>
 			</div>
