minor corrections in team details

--- a/index.html
+++ b/index.html
@@ -2414,7 +2414,7 @@
 					</div>
 					<div class="card-footer justify-content-center">
 						<a href="https://www.facebook.com/shumi.mitra.5" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
-						<a href="www.linkedin.com/in/shumi-mitra-0950a4127" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+						<a href="https://www.linkedin.com/in/shumi-mitra-0950a4127" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
 					</div>
 				</div>
 			</div>
@@ -2548,7 +2548,7 @@
 						<img class="img" src="./assets/img/Team/2022/Rohit Shinde_Purvodaya.JPG" />
 					</div>
 					<div class="card-body ">
-						<h4 class="card-title">Rohit Shinde_Purvodaya</h4>
+						<h4 class="card-title">Rohit Shinde</h4>
 					</div>
 					<div class="card-footer justify-content-center">
 						<a href="https://www.facebook.com/theweeknd1996/" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
@@ -2650,20 +2650,7 @@
 				</div>
 			</div>
 			
-			<div class="col-md-2">
-				<div class="card card-profile card-plain">
-					<div class="card-header card-avatar">
-						<img class="img" src="./assets/img/Team/2022/Sameer Quadri_Purvodaya.JPEG" />
-					</div>
-					<div class="card-body ">
-						<h4 class="card-title">Sameer Quadri</h4>
-					</div>
-					<div class="card-footer justify-content-center">
-						<a href="https://www.facebook.com/sameer.quadri.12/" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
-						<a href="https://www.linkedin.com/in/sameer-quadri-682143110/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
-					</div>
-				</div>
-			</div>
+			
 		</div>
 
 	</div>
