minor corrections to team details
Changed some team members names

--- a/index.html
+++ b/index.html
@@ -2488,7 +2488,7 @@
 						<img class="img" src="./assets/img/Team/2022/Dhaval Bhanushali_Purvodaya.JPG" />
 					</div>
 					<div class="card-body ">
-						<h4 class="card-title">Dhaval Bhanushali</h4>
+						<h4 class="card-title">Dhaval</h4>
 					</div>
 					<div class="card-footer justify-content-center">
 						<a href="https://www.facebook.com/dhaval.bhanushali.186590" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
@@ -2581,7 +2581,7 @@
 						<img class="img" src="./assets/img/Team/2022/Saveen Hanwatkar_Purvodaya.JPG" />
 					</div>
 					<div class="card-body ">
-						<h4 class="card-title">Saveen Hanwatkar</h4>
+						<h4 class="card-title">Saveen</h4>
 					</div>
 					<div class="card-footer justify-content-center">
 						<a href="https://www.facebook.com/saveen.hanwatkar.3" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
