faculty details updated
faculty coordinators details and youtube link updated

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
 		<div class="col-md-5 ml-auto">
 			<div class="iframe-container">
-				<iframe height="250" src="https://www.youtube.com/embed/OEk6H0kHYBI" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+				<iframe height="250" src="https://youtu.be/AJDF2RNDlnY" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 			</div>
 		</div>
 		<div class=col-md-10>
@@ -1950,15 +1950,15 @@
 				<div class="col-md-4">
 					<div class="card card-profile card-plain">
 						<div class="card-header card-avatar">
-							<img class="img" src="./assets/img/faculties/saini.jpg" />
+							<img class="img" src="./assets/img/faculties/achandra.jpg" />
 						</div>
 						<div class="card-body ">
-							<h4 class="card-title">Prof. Saini Das</h4>
+							<h4 class="card-title">Prof. Abhijeet Chandra</h4>
 							<h6 class="card-category text-muted">Assistant Professor</h6>
 						</div>
 						<div class="card-footer justify-content-center">
-							<a href="https://www.facebook.com/saini.das.731" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
-							<a href="https://www.linkedin.com/in/saini-das-77520a14/" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
+							<a href="https://www.facebook.com/chandra.abhijeet" target="_blank" class="btn btn-just-icon btn-link btn-facebook"><i class="fa fa-facebook"></i></a>
+							<a href="https://www.linkedin.com/in/abhijeetc" target="_blank" class="btn btn-just-icon btn-link btn-linkedin"><i class="fa fa-linkedin"></i></a>
 						</div>
 					</div>
 				</div>
