--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
 		<div class="col-md-5 ml-auto">
 			<div class="iframe-container">
-				<iframe height="250" src="https://youtu.be/AJDF2RNDlnY" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+				<iframe height="250" src="https://www.youtube.com/embed/AJDF2RNDlnY" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 			</div>
 		</div>
 		<div class=col-md-10>
@@ -1237,54 +1237,54 @@
           	</div>
           	<div class="row">
           		<div class="col-md-3">
-          			<a target="_blank" href="http://www.insanalytics.com/">
+          			<a target="_blank" href="https://kayesssquare.com/">
           				<div class="card card-profile">
           					<div >
-          						<br><img class="img" height=70px width=auto type="image/png" src="./assets/img/Sponsors/insAnalytics.jpg" />
+          						<br><img class="img" height=70px width=auto type="image/png" src="./assets/img/Sponsors/2022/Kayess Square Consulting.png" />
           					</div>
           					<div class="card-body ">
-          						<h6 class="card-title"><br>insAnalytics</h6>
-          						<h6 class="card-category text-muted">Industry knowledge partner & Event Sponsor</h6>
+          						<h6 class="card-title"><br>Kayess Square</h6>
+          						<h6 class="card-category text-muted">Event Sponsor</h6>
           					</div>
           				</div>
           			</a>
 
           		</div>
           		<div class="col-md-3">
-          			<a target="_blank" href="https://www.actpartners.in">
+          			<a target="_blank" href="https://learningwhiletravelling.com/home">
           				<div class="card card-profile">
           					<div >
-          						<br><img class="img" height=60px width=auto type="image/png" src="./assets/img/Sponsors/ACT Partners.png" />
+          						<br><img class="img" height=60px width=auto type="image/png" src="./assets/img/Sponsors/2022/Learning While Travelling.png" />
           					</div>
           					<div class="card-body ">
-          						<h6 class="card-title"><br>ACT Partners</h6>
+          						<h6 class="card-title"><br>Learning While Travelling</h6>
           						<h6 class="card-category text-muted">Co-sponsor</h6>
           					</div>
           				</div>
           			</a>
           		</div>
           		<div class="col-md-3">
-          			<a target="_blank" href="https://www.scnext.org/">
+          			<a target="_blank" href="https://www.bplanexperts.com/">
           				<div class="card card-profile">
           					<div >
-          						<br><img class="img" height=36px width=auto type="image/png" src="./assets/img/Sponsors/ISCEA - SCNext India SkillPRO.jpg" />
+          						<br><img class="img" height=36px width=auto type="image/png" src="./assets/img/Sponsors/2022/BPlan Experts Logo.png" />
           					</div>
           					<div class="card-body ">
-          						<h6 class="card-title"><br>ISCEA - SCNext India SkillPRO</h6>
-          						<h6 class="card-category text-muted">Knowledge Partner</h6>
+          						<h6 class="card-title"><br>BPlan Experts</h6>
+          						<h6 class="card-category text-muted">Co-Sponsor</h6>
           					</div>
           				</div>
           			</a>
           		</div>
           		<div class="col-md-3">
-          		<a target="_blank" href="https://learningwhiletravelling.com/">
+          		<a target="_blank" href="https://arthayan.in/">
           			<div class="card card-profile">
           				<div >
-          					<br><img class="img" height=70px width=auto type="image/png" src="./assets/img/Sponsors/Learning_While_Travelling.png" />
+          					<br><img class="img" height=70px width=auto type="image/png" src="./assets/img/Sponsors/2022/Arthayan logo.png" />
           				</div>
           				<div class="card-body ">
-          					<h6 class="card-title"><br>Learning While Travelling</h6>
-          					<h6 class="card-category text-muted">Co-sponsor</h6>
+          					<h6 class="card-title"><br>Arthayan</h6>
+          					<h6 class="card-category text-muted">Mentorship Partner</h6>
           				</div>
           			</div>
           		</a>
@@ -1293,45 +1293,58 @@
           	</div>	
           	<div class="row">
           		<div class="col-md-3">
-          			<a target="_blank" href="https://lifeschool.co.in/">
+          			<a target="_blank" href="https://crazyaboutstartups.com/">
           				<div class="card card-profile">
           					<div >
-          						<br><img class="img" height=60px width=auto type="image/png" src="./assets/img/Sponsors/Logo LifeSchool.jpg" />
+          						<br><img class="img" height=60px width=auto type="image/png" src="./assets/img/Sponsors/2022/Crazy About Startups.png" />
           					</div>
           					<div class="card-body ">
-          						<h6 class="card-title"><br>LifeSchool</h6>
+          						<h6 class="card-title"><br>Crazy About Startups</h6>
+          						<h6 class="card-category text-muted">Digital Media Partner</h6>
+          					</div>
+          				</div>
+          			</a>
+          		</div>
+          		<div class="col-md-3">
+          			<a target="_blank" href="https://www.nishkaera.com/">
+          				<div class="card card-profile">
+          					<div >
+          						<br><img class="img" height=60px width=auto type="image/png" src="./assets/img/Sponsors/2022/Nishkaera.png" />
+          					</div>
+          					<div class="card-body ">
+          						<h6 class="card-title"><br>Nishkaera</h6>
           						<h6 class="card-category text-muted">Co-sponsor</h6>
           					</div>
           				</div>
           			</a>
           		</div>
           		<div class="col-md-3">
-          			<a target="_blank" href="http://www.forevision.co.in/">
+          			<a target="_blank" href="https://www.ecrivonsgraphology.com/">
           				<div class="card card-profile">
           					<div >
-          						<br><img class="img" height=60px width=auto type="image/png" src="./assets/img/Sponsors/Logo ForeVision.jpg" />
+          						<br><img class="img" height=60px width=auto type="image/png" src="./assets/img/Sponsors/2022/Ecrivons.png" />
           					</div>
           					<div class="card-body ">
-          						<h6 class="card-title"><br>ForeVision</h6>
-          						<h6 class="card-category text-muted">Co-sponsor</h6>
+          						<h6 class="card-title"><br>Ecrivons</h6>
+          						<h6 class="card-category text-muted">Mentorship Partner</h6>
           					</div>
           				</div>
           			</a>
           		</div>
-          		<div class="col-md-3">
-          			<a target="_blank" href="https://madworks.in/">
-          				<div class="card card-profile">
-          					<div >
-          						<br><img class="img" height=60px width=auto type="image/png" src="./assets/img/Sponsors/Logo MADWorks.png" />
-          					</div>
-          					<div class="card-body ">
-          						<h6 class="card-title"><br>Mad Works</h6>
-          						<h6 class="card-category text-muted">Co-Sponsor</h6>
-          					</div>
-          				</div>
-          			</a>
-          		</div>
-          		<div class="col-md-3">
+				<!-- <div class="col-md-3"> -->
+          			<!-- <a target="_blank" href="https://www.agri10x.com/"> -->
+          				<!-- <div class="card card-profile"> -->
+          					<!-- <div > -->
+          						<!-- <br><img class="img" height=60px width=auto type="image/png" src="./assets/img/Sponsors/2022/Agri10x.png" /> -->
+          					<!-- </div> -->
+          					<!-- <div class="card-body "> -->
+          						<!-- <h6 class="card-title"><br>Agri10x</h6> -->
+          						<!-- <h6 class="card-category text-muted">Event Sponsor</h6> -->
+          					<!-- </div> -->
+          				<!-- </div> -->
+          			<!-- </a> -->
+          		<!-- </div> -->
+          		<!--<div class="col-md-3">
           			<a target="_blank" href="https://www.stockgro.club/">
           				<div class="card card-profile">
           					<div >
@@ -1343,10 +1356,10 @@
           					</div>
           				</div>
           			</a>
-          		</div>
+          		</div>-->
 
           	</div>
-          	<div class="row">
+          	<!--<div class="row">
           		<div class="col-md-3">
           			<a target="_blank" href="https://ecole-intuit-lab.co.in/">
           				<div class="card card-profile">
@@ -1399,23 +1412,23 @@
           				</div>
           			</a>
           		</div>
-          	</div>
+          	</div>-->
           </div>
 
-          <div class="row">
-          	<div class="col-md-3">
-          		<a target="_blank" href="http://www.bplanexperts.com/">
-          			<div class="card card-profile">
-          				<div >
-          					<br><img class="img" height=50px width=auto type="image/png" src="./assets/img/Sponsors/BPlan Experts.png" />
-          				</div>
-          				<div class="card-body ">
-          					<h6 class="card-title"><br>BPlan Experts</h6>
-          					<h6 class="card-category text-muted">Co-sponsor</h6>
-          				</div>
-          			</div>
-          		</a>
-          	</div>
+          <!-- <div class="row"> -->
+          	<!-- <div class="col-md-3"> -->
+          		<!-- <a target="_blank" href="http://www.bplanexperts.com/"> -->
+          			<!-- <div class="card card-profile"> -->
+          				<!-- <div > -->
+          					<!-- <br><img class="img" height=50px width=auto type="image/png" src="./assets/img/sponsors/bplan experts.png" /> -->
+          				<!-- </div> -->
+          				<!-- <div class="card-body "> -->
+          					<!-- <h6 class="card-title"><br>bplan experts</h6> -->
+          					<!-- <h6 class="card-category text-muted">co-sponsor</h6> -->
+          				<!-- </div> -->
+          			<!-- </div> -->
+          		<!-- </a> -->
+          	<!-- </div> -->
 
           </div>
 
