corrected alignment in sponsors

--- a/index.html
+++ b/index.html
@@ -1289,8 +1289,8 @@
           			</div>
           		</a>
           	</div>
-
-          	</div>	
+			</div>
+	
           	<div class="row">
           		<div class="col-md-3">
           			<a target="_blank" href="https://crazyaboutstartups.com/">
@@ -1358,7 +1358,7 @@
           			</a>
           		</div>-->
 
-          	</div>
+          	<!--</div>-->
           	<!--<div class="row">
           		<div class="col-md-3">
           			<a target="_blank" href="https://ecole-intuit-lab.co.in/">
