changing the alignment for event sponsors

--- a/index.html
+++ b/index.html
@@ -1331,7 +1331,7 @@
           				</div>
           			</a>
           		</div>
-          		<!--<div class="col-md-3">
+          		<div class="col-md-3">
           			<a target="_blank" href="https://www.stockgro.club/">
           				<div class="card card-profile">
           					<div >
@@ -1343,7 +1343,7 @@
           					</div>
           				</div>
           			</a>
-          		</div>-->
+          		</div>
 
           	</div>
           	<!--<div class="row">
